# django-odata

./: .gitignore  Makefile  README.md  code-review-tasks.md  example_usage.py  pyproject.toml  pytest.ini  requirements-dev.txt  setup.py  speckit.implement.md  speckit.plan.md  speckit.specify.md  test_parse_expand.py
.github/workflows/: ci-tests.yml  pr-quality.yml  pr-tests.yml  publish-to-pypi.yml  test.yml
.specify/implementations/: 009-decouple-odata-repository.md
.specify/memory/: constitution.md
.specify/plans/: 001-remove-drf-flex-fields.md  002-enhanced-expand-support.md  003-optimize-field-queries-tasks.md  003-optimize-field-queries.md  004-include-count-when-requested.md  004-migrate-to-uv-tasks.md  004-migrate-to-uv.md  005-replace-black-and-isort-with-ruff.md  006-generate-test-data.md  007-expand-all-fields-on-no-select.md  008-generate-odata-serializers.md  009-decouple-odata-repository.md
.specify/specs/: 001-remove-drf-flex-fields.md  002-enhanced-expand-support.md  003-optimize-field-queries.md  004-include-count-when-requested.md  004-migrate-to-uv.md  005-replace-black-and-isort-with-ruff.md  006-generate-test-data.md  007-expand-all-fields-on-no-select.md  008-generate-odata-serializers.md  009-decouple-odata-repository.md
django_odata/: __init__.py  code_generator.py  core.py  dependency_detector.py  introspection.py  mixins.py  native_fields.py  optimization.py  repository.py  serializers.py  utils.py  viewsets.py
django_odata/management/commands/: generate_odata_serializer.py
docs/: clean-architecture-odata.md  enhanced-expand-support.md  field-optimization.md  flexfields-audit.md  migration_guide.md
example/: README.md  manage.py
example/blog/: admin.py  apps.py  models.py  repositories.py  serializers.py  services.py  use_cases.py  views.py
example/blog/management/commands/: export_blog_data.py  seed_data.py
example/blog/serializers/: __init__.py  author.py  blog_post.py
example/example/: settings.py  urls.py
tests/: README.md  apps.py  conftest.py  settings.py  test_core.py  test_expand_enhancements.py  test_field_optimization.py  test_field_optimization_integration.py  test_mixins.py  test_native_fields.py  test_odata_comprehensive.py  test_odata_expressions.py  test_odata_performance.py  test_optimization.py  test_prefetch_related_optimization.py  test_repository.py  test_select_related_optimization.py  test_serializers.py  test_utils.py  test_viewsets.py
tests/integration/: test_enhanced_expand.py  test_odata_expressions.py  test_odata_integration.py  test_odata_migration.py  test_odata_performance.py
tests/integration/support/: apps.py  models.py  settings.py  urls.py
tests/integration/support/migrations/: 0001_initial.py
tests/performance/: __init__.py  test_baseline.py  test_odata_performance_comparison.py
