[project]
name = "django-odata"
version = "2.0.0"
description = "OData v4 implementation for Django REST Framework"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Alexandre Busquets", email = "alexandre.busquets@fundcraft.lu"}
]
keywords = ["django", "odata", "rest", "api", "djangorestframework"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Django",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "django>=4.2",
    "djangorestframework>=3.12.0",
    "odata-query>=0.9.0",
]

[project.optional-dependencies]
dev = [
    "flake8>=3.8",
    "pytest>=6.0",
    "pytest-cov>=2.0",
    "pytest-django>=4.0",
    "pytest-benchmark>=3.4.0",
    "mypy>=0.900",
    "ruff>=0.5.5",
    "Faker>=25.0.0",
]

[dependency-groups]
dev = [
    "flake8>=3.8",
    "pytest>=6.0",
    "pytest-cov>=2.0",
    "pytest-django>=4.0",
    "pytest-benchmark>=3.4.0",
    "mypy>=0.900",
    "ruff>=0.5.5",
]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.uv]
package = false

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.settings"
python_files = "tests.py test_*.py *_tests.py"
addopts = "--verbose --tb=short --no-migrations"
testpaths = ["tests", "example"]
markers = [
    "benchmark: run benchmark tests",
]
